tests/should_fail/wrong_binary_op_types.nv
module wrong_binary_op_types
// SHOULD FAIL: adding Int and String
let result = 42 + "hello"
